--- a/base_config/settings.py.sample
+++ b/base_config/settings.py.sample
@@ -20,3 +20,5 @@ TEST_USER = None
 TEST_USER_PWD = None
 APP_TESTS = None
 BASE_TEST = False
+LB = False  # True for balancing instance in application
+BALANCE = False     # list of balance servers in application
