--- a/base_config/settings.py.sample
+++ b/base_config/settings.py.sample
@@ -23,3 +23,4 @@ BASE_TEST = False
 LB = False  # True for balancing instance in application
 BALANCE = False     # list of balance servers in application
 APP_PREFIX = None
+SESSION_STORAGE = DB # DB | REDIS
