--- a/base_config/settings.py.sample
+++ b/base_config/settings.py.sample
@@ -7,6 +7,7 @@ APPS = [
 BASE_APPS = [
      'base_api.users',
      'base_api.hash2params',
+     'base_api.options',
 ]
 
 LOG_DIR = '/var/log/base'
