register master balancer

--- a/base_config/settings.py.sample
+++ b/base_config/settings.py.sample
@@ -29,3 +29,4 @@ SESSION_STORAGE = 'DB' # 'DB' | 'REDIS'
 REDIS_SERVER = 'localhost'
 REDIS_PORT = 6379
 CHANGE_EMAIL_ADDRESS = 'http://localhost:8778/change'
+MASTER=False    # IP address of the master server
