--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-mysqlclient==1.3.7
-redis==2.10.5
-tornado==4.3
-bcrypt==2.0.0
+mysqlclient>=1.3.7
+redis>=2.10.5
+tornado>=4.3
+bcrypt>=2.0.0
+mailchimp>=2.0.9
+
