--- a/base_config/settings.py.sample
+++ b/base_config/settings.py.sample
@@ -31,5 +31,6 @@ REDIS_SERVER = 'localhost'
 REDIS_PORT = 6379
 CHANGE_EMAIL_ADDRESS = 'http://localhost:8778/change'
 MASTER=False    # IP address of the master server
+MAIL_API_KEY = 'mandrillapikey'
 MAIL_CHANNEL = 'BSM'
 MAIL_CHANNEL_TIMEOUT = 2
