--- a/base_config/settings.py.sample
+++ b/base_config/settings.py.sample
@@ -36,3 +36,4 @@ MASTER=False    # IP address of the master server
 MAIL_API_KEY = 'mandrillapikey'
 MAIL_CHANNEL = 'BSM'
 MAIL_CHANNEL_TIMEOUT = 2
+STRONG_PASSWORD = False
