--- a/base_config/send_mail_config.py.sample
+++ b/base_config/send_mail_config.py.sample
@@ -11,7 +11,7 @@ db_passwd = '123'
 db_name = 'one'  # Promenjeno za potrebe TESTA
 db_charset = 'utf8'
 
-sg_key = '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'
+sg_key = '__SENDGRID_KEY__'
 
 REDIS_SERVER = 'localhost'
 REDIS_PORT = 6379
