--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,6 @@ include LICENSE.txt
 include INSTALL.txt
 include base/bin/basemanager
 include base/bin/basemanager.py
+include base/application/templates/introduction.html
+include base/application/templates/specification.html
+
