--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,4 +4,6 @@ include base/bin/basemanager
 include base/bin/basemanager.py
 include base/application/templates/introduction.html
 include base/application/templates/specification.html
+include base/builder/playground/index.html
+include base/builder/playground/playground
 
