remove cookie on logout

--- a/base_config/settings.py.sample
+++ b/base_config/settings.py.sample
@@ -32,7 +32,7 @@ SESSION_STORAGE = 'DB' # 'DB' | 'REDIS'
 REDIS_SERVER = 'localhost'
 REDIS_PORT = 6379
 CHANGE_EMAIL_ADDRESS = 'http://localhost:8778/change'
-MherherASTER=False    # IP address of the master server
+MASTER=False    # IP address of the master server
 MAIL_API_KEY = 'mandrillapikey'
 MAIL_CHANNEL = 'BSM'
 MAIL_CHANNEL_TIMEOUT = 2
