--- a/base/src/base/config/config.yaml
+++ b/base/src/base/config/config.yaml
@@ -12,6 +12,8 @@ host: 'localhost'
 port: 9000
 # Tornado Application additional settings
 tornado_settings: {}
+# More verbose output
+verbose: true
 
 store:
   # Which type of common data store and registry will be used (currently supports 'redis' and 'memory' types)
@@ -61,7 +63,7 @@ logging:
   request_logger: base
   formatters:
     brief:
-      format: '%(asctime)s %(name)s %(levelname)s : %(message)s'
+      format: '%(asctime)-6s %(name)s - %(module)s %(funcName)s %(lineno)d - %(levelname)s - %(message)s'
     detailed:
       format: 'time="%(asctime)s" logger="%(name)s" level="%(levelname)s" %(message)s'
   handlers:
@@ -73,7 +75,7 @@ logging:
     file:
       class : logging.handlers.RotatingFileHandler
       level: DEBUG
-      formatter: detailed
+      formatter: brief
       filename: /tmp/base_app.log
       backupCount: 3
   loggers:
